--- a/app/templates/advance.html
+++ b/app/templates/advance.html
@@ -19,43 +19,44 @@
 <div class="container pt-5">
     <div class="row">
         <div class="col-md-3 col-sm-6">
-            <h5> Soil moisture range(%) </h5>
-            <form class="form-floating">
-                <input type="number" class="form-control" id="moisMax" step="5" min="30" max="80">
-                <label for="moisMax">Max</label>
-            </form>
-            <div class="pt-2"></div>
+            <h5> Soil moisture range (%)</h5>
             <form class="form-floating">
                 <input type="number" class="form-control" id="moisMin" step="5" min="10" max="50">
                 <label for="moisMin">Min</label>
             </form>
+            <div class="pt-2"></div>
+            <form class="form-floating">
+                <input type="number" class="form-control" id="moisMax" step="5" min="30" max="80">
+                <label for="moisMax">Max</label>
+            </form>
         </div>
         <div class="col-md-3 col-sm-6">
-            <h5> Temperature range (°C) </h5>
-            <form class="form-floating">
-                <input type="number" class="form-control" id="tempMax" step="5" min="10" max="45">
-                <label for="tempMax">Max</label>
-            </form>
-            <div class="pt-2"></div>
+            <h5> Temperature range (°C)</h5>
             <form class="form-floating">
                 <input type="number" class="form-control" id="tempMin" step="5" min="-10" max="20">
                 <label for="tempMin">Min</label>
             </form>
+            <div class="pt-2"></div>
+            <form class="form-floating">
+                <input type="number" class="form-control" id="tempMax" step="5" min="10" max="45">
+                <label for="tempMax">Max</label>
+            </form>
         </div>
         <div class="col-md-3 col-sm-6">
             <h5> Light range (Lux)</h5>
-            <form class="form-floating">
-                <input type="number" class="form-control" id="lightMax" step="100" min="800" max="3000">
-                <label for="lightMax">Max</label>
-            </form>
-            <div class="pt-2"></div>
+            
             <form class="form-floating">
                 <input type="number" class="form-control" id="lightMin" step="100" min="0" max="1000">
                 <label for="lightMin">Min</label>
             </form>
+            <div class="pt-2"></div>
+            <form class="form-floating">
+                <input type="number" class="form-control" id="lightMax" step="100" min="800" max="3000">
+                <label for="lightMax">Max</label>
+            </form>
         </div>
         <div class="col-md-3 col-sm-6">
-            <h5> Watering & Picture setting</h5>
+            <h5> Watering & Picture settings</h5>
             <form class="form-floating">
                 <input type="number" class="form-control" id="wateringTime" step="1">
                 <label for="wateringTime">Watering Time (sec)</label>
@@ -69,10 +70,10 @@
         <div class="container pt-2">
             <div class="row">
                 <div class="col-md-6 sys pt-3">
-                    <button type="button" class="btn btn-success" id="update-btn">Update Setting</button>
+                    <button type="button" class="btn btn-success" id="update-btn"><span class="bi-gear-fill"></span>&nbsp;Update Settings</button>
                 </div>
                 <div class="col-md-6 sys pt-3">
-                    <button type="button" class="btn btn-info" id="reset-btn">Reset to defaults</button>
+                    <button type="button" class="btn btn-info" id="reset-btn"><span class="bi-trash"></span>&nbsp;Reset to defaults</button>
                 </div>
             </div>
         </div>
