Advance:Change unit water time to ms Index:Change the range of light and mois Historical: Hight of plot can adjust with data

--- a/app/templates/advance.html
+++ b/app/templates/advance.html
@@ -59,7 +59,7 @@
             <h5> Watering & Picture settings</h5>
             <form class="form-floating">
                 <input type="number" class="form-control" id="wateringTime" step="1">
-                <label for="wateringTime">Watering Time (sec)</label>
+                <label for="wateringTime">Watering Time (ms)</label>
             </form>
             <div class="pt-2"></div>
             <form class="form-floating">
