--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -19,7 +19,7 @@
             <div id="moisData"></div>
             <h5 class="pt-3">Temp data</h5>
             <div id="tempData"></div>
-            <h5 class="pt-3">Light data (Lux/100)</h5>
+            <h5 class="pt-3">Light data (Lux)</h5>
             <div id="lightData"></div>
         </div>
         <div class="col-md-4 col-sm-4 sys">
@@ -35,16 +35,16 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td>2022 Sep 2 18:20:10</td>
-                        <td>Moisture lower than 20%</td>
+                        <td id="TimeStamp0">2022 Sep 2 18:20:10</td>
+                        <td id="Alarm0">Moisture lower than 20%</td>
                       </tr>
                       <tr>
-                        <td>2022 Sep 2 18:20:10</td>
-                        <td>Temperature is over 35 °C</td>
+                        <td id="TimeStamp1">2022 Sep 2 18:20:10</td>
+                        <td id="Alarm1">Temperature is over 35 °C</td>
                       </tr>
                       <tr>
-                        <td>2022 Sep 2 18:20:10</td>
-                        <td>Light is lower than 5</td>
+                        <td id="TimeStamp2">2022 Sep 2 18:20:10</td>
+                        <td id="Alarm2">Light is lower than 5</td>
                       </tr>
                     </tbody>
                   </table>
