--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -5,6 +5,7 @@
   var moisData = {{ data.moisData }}
   var tempData = {{ data.tempData }}
   var lightData = {{ data.lightData }}
+  var timeStamp = {{ data.timeStamp }}
   var moisAlert = {{ data.moisAlert}}
   var tempAlert = {{ data.tempAlert }}
   var lightAlert = {{ data.lightAlert }}
