change the message into table

--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -29,26 +29,34 @@
         <div class="col-md-4 col-sm-4 sys">
             <div>
               <div class="pt-3">
-                <h5>Alert history</h5>
+                <h5>Status history</h5>
                 <table class="table table-warning">
                     <thead>
                       <tr>
                         <th scope="col">Time</th>
-                        <th scope="col">Alarm message</th>
+                        <th scope="col">Moisture</th>
+                        <th scope="col">Temperature</th>
+                        <th scope="col">Light</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
                         <td id="TimeStamp0">2022 Sep 2 18:20:10</td>
-                        <td id="Alarm0">Moisture lower than 20%</td>
+                        <td id="moisAlert0">Moisture lower than 20%</td>
+                        <td id="tempAlert0">Moisture lower than 20%</td>
+                        <td id="lightAlert0">Moisture lower than 20%</td>
                       </tr>
                       <tr>
                         <td id="TimeStamp1">2022 Sep 2 18:20:10</td>
-                        <td id="Alarm1">Temperature is over 35 °C</td>
+                        <td id="moisAlert1">Temperature is over 35 °C</td>
+                        <td id="tempAlert1">Moisture lower than 20%</td>
+                        <td id="lightAlert1">Moisture lower than 20%</td>
                       </tr>
                       <tr>
                         <td id="TimeStamp2">2022 Sep 2 18:20:10</td>
-                        <td id="Alarm2">Light is lower than 5</td>
+                        <td id="moisAlert2">Light is lower than 5</td>
+                        <td id="tempAlert2">Moisture lower than 20%</td>
+                        <td id="lightAlert2">Moisture lower than 20%</td>
                       </tr>
                     </tbody>
                   </table>
