--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -34,9 +34,9 @@
                     <thead>
                       <tr>
                         <th scope="col">Time</th>
-                        <th scope="col">Moisture</th>
-                        <th scope="col">Temperature</th>
-                        <th scope="col">Light</th>
+                        <th scope="col">Moisture(%)</th>
+                        <th scope="col">Temperature(°C)</th>
+                        <th scope="col">Light(lux)</th>
                       </tr>
                     </thead>
                     <tbody>
