--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-4 col-sm-4 sys">
             <div>
-              <div class="pt-3">
+              <div class="table-wrapper pt-3">
                 <h5>Status history</h5>
                 <table class="table table-warning">
                     <thead>
