--- a/app/templates/historical.html
+++ b/app/templates/historical.html
@@ -11,7 +11,7 @@
   var lightAlert = {{ data.lightAlert }}
 </script>
 
-<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="{{ url_for('static', filename='js/d3.v7.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/historical.js') }}"></script>
 {% endblock %} 
 
